# bookmark-cleaner

./: .env.example  .gitignore  LICENSE  Makefile  README.md  ai.py  bookmarks  bookmarks-python  browser.py  db.py  env_loader.py  exporter.py  main.py  parser.py  pyproject.toml  requirements.txt  worker.py
examples/: category_rules.json  local-smoke-bookmarks.json
scripts/: analyze_bookmark_source.py  setup_venv.sh  smoke_test_gemini.sh  test_gemini_key.py  verify_exported_metadata.py
src/bookmark_analyzer/: __init__.py  ai_classifier.py  browser_checker.py  category_rules.py  cli.py  config.py  dedupe.py  env_loader.py  exporters.py  http_checker.py  io_utils.py  metadata_fetcher.py  models.py  pipeline.py  rate_limit.py  storage.py  utils.py
