[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-analyzer"
version = "0.1.0"
description = "Production-ready bookmark analyzer with async URL checks, browser fallback, AI classification, deduplication, and JSON exports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10.0",
  "openai>=1.50.0",
  "playwright>=1.48.0",
]

[project.scripts]
bookmark-analyzer = "bookmark_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
